# vtal-fitness-tracker

./: .gitignore  README.md
QtDisplay/: DashboardWidgets.h  FitnessTrackerWindow.cpp  FitnessTrackerWindow.h  MockSensor.cpp  MockSensor.h  main.cpp
QtFitnessTrackerTest/: CMakeLists.txt  DashboardWidgets.cpp  DashboardWidgets.h  FitnessTrackerWindow.cpp  FitnessTrackerWindow.h  MockSensor.cpp  MockSensor.h
VTal Data Reading/: .cproject  .mxproject  .project  DMAVideo Debug.launch  DMAVideo.ioc  VTal Data Reading Debug.launch
VTal Data Reading/Core/Inc/: main.h  stm32l4xx_it.h
VTal Data Reading/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
VTal Data Reading/Debug/: DMAVideo.elf  DMAVideo.list  DMAVideo.map  VTal Data Reading.elf  VTal Data Reading.list  VTal Data Reading.map  makefile  objects.list
VTal Data Reading/Debug/Core/Src/: main.cyclo  main.d  main.su  stm32l4xx_hal_msp.cyclo  stm32l4xx_hal_msp.d  stm32l4xx_hal_msp.su  stm32l4xx_it.cyclo  stm32l4xx_it.d  stm32l4xx_it.su  subdir.mk  system_stm32l4xx.d
VTal Data Reading/Debug/Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal.d  stm32l4xx_hal_cortex.d  stm32l4xx_hal_dma.d  stm32l4xx_hal_dma_ex.d  stm32l4xx_hal_exti.d  stm32l4xx_hal_flash.d  stm32l4xx_hal_flash_ex.d  stm32l4xx_hal_flash_ramfunc.d  stm32l4xx_hal_gpio.d  stm32l4xx_hal_i2c.d  stm32l4xx_hal_i2c_ex.d  stm32l4xx_hal_pwr.d  stm32l4xx_hal_pwr_ex.d  stm32l4xx_hal_rcc.d  stm32l4xx_hal_rcc_ex.d  stm32l4xx_hal_uart.d  stm32l4xx_hal_uart_ex.d  subdir.mk
